# TeajectoryErrorEstimation

./: CMakeLists.txt  README.md  trajectoryError.cpp  useSophus.cpp
requiredPackages/: README.md
